# VYB

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
docs/: 01_VISION.md  02_ARCHITECTURE.md  03_PROJECT_FORMAT.md  04_IMPORT_COMPATIBILITY.md  05_RENDERING_PIPELINE.md  06_ASSET_PIPELINE.md  07_SCENE_SYSTEM.md  08_COMPONENT_SYSTEM.md  09_PLUGIN_SYSTEM.md  10_AI_ASSISTED_WORKFLOWS.md  11_BUILD_SYSTEM.md  12_HARDWARE_SUPPORT.md  13_DEVELOPER_GUIDE.md  14_CONTRIBUTING.md  15_ROADMAP.md  16_SECURITY.md  17_TESTING.md  18_RELEASE_STRATEGY.md
plugins/ai-design-assistant/: plugin.vyb.json
plugins/godot-import-assistant/: plugin.vyb.json
plugins/unity-import-assistant/: plugin.vyb.json
plugins/unreal-import-assistant/: plugin.vyb.json
plugins/webgpu-renderer-preview/: plugin.vyb.json
schemas/: material.schema.json  plugin-manifest.schema.json  scene.schema.json  vyb-project.schema.json
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: build_io.rs  filesystem.rs  import_io.rs  main.rs  scene_io.rs
src/app/: App.tsx  studioBuildLabel.ts
src/docs-viewer/: DocsViewer.tsx
src/engine/: index.ts
src/tests/: aiTaskExecutor.test.ts  assetRegistry.test.ts  buildPipeline.test.ts  ecsWorld.test.ts  godotImport.test.ts  importDetection.test.ts  javascriptScriptBridge.test.ts  mat4.test.ts  nodeGraphExecutor.test.ts  physicsWorld.test.ts  pluginManifest.test.ts  sceneEcs.test.ts  (+7 more)
(+139 files in other folders)
